syntax = "proto3";

package com.example.kafa.activecallingapp;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.kafa.activecallingapp.proto";

service ActiveCallingQuery {
  rpc GetMetadataForStore(ActiveCallingServiceRequest) returns (HostStoreInfoList) ;

  rpc GetMetadataForStoreAndKey(ActiveCallingServiceRequest) returns (HostStoreInfoList);

  rpc GetAllMetadata(google.protobuf.Empty) returns (HostStoreInfoList) ;

  rpc GetActiveCalling(ActiveCallingServiceRequest) returns (ActiveCallingResponse);
}

message HostStoreInfo{
  string host = 1;
  int32 port = 2;
  // TODO: check how you can use java.util.Set
  repeated string storeNames = 3;
}

message ActiveCallingServiceRequest{
  string storeName = 1;
  string key = 2;
}

message HostStoreInfoList{
  repeated HostStoreInfo metadatas = 1;
}

message ActiveCallingResponse{
  string status = 1;
}
